# PrusaSlicer

./: .gitignore  CMakeLists.txt  README.md
cmake/modules/: FindNanoSVG.cmake  FindOpenVDB.cmake
doc/: Dependencies.md  How to build - Mac OS.md  How to build - Windows.md  mac_build.sh
src/libnest2d/include/libnest2d/: optimizer.hpp
src/libnest2d/include/libnest2d/utils/: metaloop.hpp
src/libslic3r/: ExtrusionSimulator.cpp  GCode.cpp  MeshBoolean.cpp  NSVGUtils.hpp  Preset.cpp  PrintBase.cpp  PrintObjectSlice.cpp  Utils.hpp  utils.cpp
src/libslic3r/Algorithm/: RegionExpansion.cpp
src/libslic3r/Fill/: FillPlanePath.cpp
src/libslic3r/Format/: SL1_SVG.cpp
src/libslic3r/Support/: SupportCommon.cpp
src/occt_wrapper/: CMakeLists.txt
src/slic3r/: CMakeLists.txt
src/slic3r/GUI/: BackgroundSlicingProcess.hpp  BitmapCache.cpp  GLTexture.cpp  GUI_App.hpp  GalleryDialog.cpp  ImGuiWrapper.cpp  PhysicalPrinterDialog.cpp  Plater.cpp  RemovableDriveManager.cpp
src/slic3r/GUI/Gizmos/: GLGizmoEmboss.cpp
tests/libslic3r/: test_emboss.cpp
